<resources>
    <string name="app_name">Smart Tech Quiz</string>
    <string name="full_app_logo">Full app logo</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_next">Next</string>
    <string name="description_app_logo">App logo</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_full_name">Full name</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="title_start_fragment">Smt Quiz</string>
    <string name="title_create_account">Create account</string>
    <string name="label_start">Start</string>
    <string name="label_score">Score</string>
</resources>