<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.createaccount.CreateAccountFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description_app_logo"
        android:src="@drawable/smt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/label_full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtName"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edtTxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtEmail"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/edtTxtPasswordConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPassword"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPasswordConfirmation" />

</androidx.constraintlayout.widget.ConstraintLayout>